--- a/backend-cc/src/main/resources/application.properties
+++ b/backend-cc/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=backend-cc
+
+spring.datasource.url=jdbc:h2:mem:dragonball
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
